--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html >
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154883382-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154883382-1');
+</script>
+
   <meta charset="UTF-8">
   <title>Merida Agency - Agência de comunicação, Marketing Digital, E-commerce - site em construção</title>
   <link href='https://fonts.googleapis.com/css?family=Kreon' rel='stylesheet' type='text/css'>
