--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Merida Agency
         <span><h3>Agência de comunicação</h3></span>
     </h2>
-    <p class="text">Nosso site está em construção. Em breve voltaremos com novas estratégias, muita criatividade para resultados incríveis para o seu negócio. Fique ligado!
+    <p class="text">Nosso site está em construção. Em breve voltaremos com novas estratégias e muita criatividade para resultados incríveis para o seu negócio. Fique ligado!
     </p>
     <div class="social">
       <a class="instagram social-link" title="Siga a Merida no Instagram" href="https://www.instagram.com/merida.agency" target="_blank">
