--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="shortcut icon" type="image/png" href="favicon-32x32.png"/>
   <meta name="description" content="Agência de comunicação, Communication, Digital Marketing agency, e-commerce,design">
   <meta name="keywords" content="agência,comunicação,marketing,digital,design,redes sociais,instagram,loja,online,ecommerce,vender,produtos,online">
-  <meta name="author" content="John Doe">
+  <meta name="author" content="Raphael Carvalho">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="css/style.css">
@@ -88,7 +88,7 @@
       <a class="instagram social-link" title="Siga a Merida no Instagram" href="https://www.instagram.com/merida.agency" target="_blank">
         <img src="instagram-icon.png" width=60 height=60/>
       </a>
-      <a class="mail social-link" title="Entre em contato conosco" href="mailto:agenciamerida@gmail.com" target="_blank">
+      <a class="mail social-link" title="Entre em contato conosco" href="mailto:contact@merida.agency" target="_blank">
         <img src="mail-icon.png" width=60 height=60/>
       </a>
     </div>
